--- a/app/views/profiles/_tabs.html.erb
+++ b/app/views/profiles/_tabs.html.erb
@@ -1,8 +1,8 @@
 <div class="overflow-x-auto">
-  <nav class="flex space-x-6">
-    <a href="#" data-tabs-target="tab" data-action="click->tabs#select" data-tab="about" class="pb-2 border-b-2 border-transparent text-gray-500 whitespace-nowrap">About</a>
-    <a href="#" data-tabs-target="tab" data-action="click->tabs#select" data-tab="offerings" class="pb-2 border-b-2 border-transparent text-gray-500 whitespace-nowrap">Offerings</a>
-    <a href="#" data-tabs-target="tab" data-action="click->tabs#select" data-tab="stories" class="pb-2 border-b-2 border-transparent text-gray-500 whitespace-nowrap">Stories</a>
-    <a href="#" data-tabs-target="tab" data-action="click->tabs#select" data-tab="reels" class="pb-2 border-b-2 border-transparent text-gray-500 whitespace-nowrap">Reels</a>
+  <nav class="flex flex-wrap md:flex-nowrap gap-4 sm:gap-6" role="tablist">
+    <a href="#" data-tabs-target="tab" data-action="click->tabs#select" data-tab="about" class="pb-2 border-b-2 border-transparent text-gray-500 whitespace-nowrap" role="tab">About</a>
+    <a href="#" data-tabs-target="tab" data-action="click->tabs#select" data-tab="offerings" class="pb-2 border-b-2 border-transparent text-gray-500 whitespace-nowrap" role="tab">Offerings</a>
+    <a href="#" data-tabs-target="tab" data-action="click->tabs#select" data-tab="stories" class="pb-2 border-b-2 border-transparent text-gray-500 whitespace-nowrap" role="tab">Stories</a>
+    <a href="#" data-tabs-target="tab" data-action="click->tabs#select" data-tab="reels" class="pb-2 border-b-2 border-transparent text-gray-500 whitespace-nowrap" role="tab">Reels</a>
   </nav>
 </div>
